<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_news"
        android:icon="@drawable/news50"
        android:title="@string/news"

        app:showAsAction="ifRoom"
        />
    <item
            android:id="@+id/action_job"
            android:checked="false"
            android:icon="@drawable/job50"
            android:title="@string/job"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_sale"
            android:checked="false"
            android:icon="@drawable/sale50"
            android:title="@string/sale"
            app:showAsAction="ifRoom"
            />
    <item
        android:id="@+id/action_event"
        android:checked="false"
        android:icon="@drawable/event50"
        android:title="@string/event"
        app:showAsAction="ifRoom"/>

</menu>