<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/viewNews_2"
              android:background="@color/TextWhite"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"

              >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/tvImageNews_2"
             />

        <TextView
            android:id="@+id/tvWhenNews_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_when_2"
            android:textColor="@color/TextWhite"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvCategoryNews_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_category_2"
            android:layout_margin="8dp"
            android:textColor="@color/TextWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvNameNews_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_name_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/LargeTextBlack"
        android:layout_margin="6dp" />

    <TextView
        android:id="@+id/tvShortDescriptionNews_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_short_description_2"
        android:textColor="@color/Desciption_text"
        android:layout_margin="6dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="@color/RecyclerViewBackground"
        android:orientation="horizontal">

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/line" />

    </RelativeLayout>

</LinearLayout>
