<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewJob"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_margin="@dimen/card_horizontal_margin"
    tools:cardCornerRadius="@dimel/card_corner_radius"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvNameJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sale_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/LargeTextBlack"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/tvWageJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_wage"
            android:textColor="@color/DateTextGrey"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"

            />

        <TextView
            android:text="@string/job_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:textColor="@color/Desciption_text"
            android:id="@+id/tvShortDescriptionJob" />

    </LinearLayout>
</android.support.v7.widget.CardView>
