<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewNews_1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_horizontal_margin"
        tools:cardCornerRadius="@dimel/card_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageNews"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvWhenNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/news_when_1"
                android:textColor="@color/DateTextGrey"

                android:layout_alignBaseline="@+id/tvCategoryNews"
                android:layout_alignBottom="@+id/tvCategoryNews"
                android:layout_alignStart="@+id/tvNameNews" />

            <TextView
                android:id="@+id/tvNameNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_name_2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageNews"
                android:layout_marginStart="17dp" />

            <TextView
                android:id="@+id/tvCategoryNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/news_category_2"
                android:textColor="@color/CategoryTextBlue"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>